fix: remove unnecessary vp placeholder text

--- a/app/views/users/_viewing_party.html.erb
+++ b/app/views/users/_viewing_party.html.erb
@@ -1,7 +1,3 @@
-<div id ="vp-id">
-  <p>viewing_party.movie_image</p>
-  <p><b>Movie Title</b></p>
-  <p>viewing_party.date<br>viewing_party.time</p>
-  <p><b>Host: </b>viewing_party.host</p>
-  <p><b>Invited: </b>viewing_party.invited_users</p>
+<div id ="vp-<%= viewing_party.id %>">
+  Placeholder for a future Viewing Party card which will include a movie image, title, date, host, and attending guests.
 </div>
