US_2 tests and functionality complete. Flash message still buggy though. Will address in today's check-in

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -2,9 +2,13 @@
 
 <%= render partial: "shared/landing_header" %><br><br>
 
-<%= button_to "Create New User", register_path %>
+<div id="new_user">
+  <%= button_to "Create New User", register_path %>
+</div>
 
-<h3> Existing Users </h3>
-<% @users.each do |user| %>
-  <%= link_to user.name, user_path(user)  %><br><br>
-<% end %>
+<ul id='existing_users'>
+  <h3> Existing Users </h3>
+  <% @users.each do |user| %>
+    <%= link_to user.name, dashboard_path(user.id)  %><br><br>
+  <% end %>
+  </ul>
