--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,7 @@
 <h1>Register New User</h1>
 
+<%= render partial: "shared/landing_header" %><br><br>
+
 <%= form_with url: "/register", method: :post, local: true do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %><br><br>
