fix: removes type from flash

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <% flash.each do |type, msg| %>
+    <% flash.each do |msg| %>
       <div>
         <%= msg %>
       </div>
