--- a/app/views/landing_page/index.html.erb
+++ b/app/views/landing_page/index.html.erb
@@ -7,8 +7,9 @@
   <ul>
     <% @users.each do |user| %>
       <li>
-        <p><%= link_to "#{user.name}", user_path(user), method: :delete %></p>
+        <p><%= link_to "#{user.name}", user_path(user) %></p>
       </li>
     <% end %>
   </ul>
+  </div>
 
