feat: boolean method discover? to display discover or search in the view

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,13 +1,16 @@
 <%= render "shared/welcome_link" %>
 
-<div class="discover-movies">
-  <% @facade.get_discover_movies.each do |movie| %>
-    <p><%= movie.name %>   <%= "Vote Average: #{movie.vote_average}" %></p>
-  <% end %>
-</div>
-
-<div class="search-movies">
-  <% @facade.get_search_movies.each do |movie| %>
-    <p><%= movie.name %>   <%= "Vote Average: #{movie.vote_average}" %></p>
-  <% end %>
-</div>
+<% if @facade.discovery? %>
+  <div class="discover-movies">
+    <% @facade.get_discover_movies.each do |movie| %>
+      <p><%= movie.name %>   <%= "Vote Average: #{movie.vote_average}" %></p>
+    <% end %>
+  </div>
+<% else %>
+  <div class="search-movies">
+    <% @facade.get_search_movies.each do |movie| %>
+      <p><%= movie.name %>   <%= "Vote Average: #{movie.vote_average}" %></p>
+    <% end %>
+  </div>
+<% end %>
+  
