Feat: adds main menu to application file

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,19 @@
     <%= javascript_importmap_tags %>
   </head>
   <body>
+    <header class="Viewing Party Lite">
+      <div style="text-align: center;">
+        <h1>Viewing Party Lite</h1>
+      </div>
+    </header>
+    <div class="navbar-container">
+      <nav class="navbar">
+        <ul class="navbar-list">
+          <li class="current-menu-item"><%= link_to "Home", root_path %></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="seperator"></div>
     <div class="top-container">
       <div class="container">
         <% flash.each do |type, notice| %>
@@ -20,3 +33,4 @@
       </div>
     </div>
   </body>
+</html>
