Fix: removes partial and fixes path to create user

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,5 @@
-<%= render partial: "shared/main_menu", locals: { items: true  } %>
 <div style="text-align: center;">
-  <a href="/register" class="button">Create New User</a>
+  <a href=<%= register_user_path %> class="button">Create New User</a>
 </div>
 <br>
 <h2 style="text-align: center;">
