--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <h2 id="page-title"><%= @user.name %>'s Dashboard</h2>
-<%= button_to "Discover Movies", "#", method: :get %>
+<%= button_to "Discover Movies", user_discover_path(@user.id), method: :get %>
 <hr>
 <div id="viewing-parties">
   <h3>Viewing Parties</h3>
