--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,4 @@
-<%= @user.name %>
+<h1><%= @user.name%>'s Dashboard</h1>
+<%= button_to "Discover Movies", user_discover_index_path(@user) %> 
 <%= render partial: "shared/landing_header" %><br><br>
+<h4> Viewing Parties </h4>
