--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,15 +1,16 @@
 <%= render "shared/welcome_link" %>
+<%= render "shared/discover_button" %><br>
 
 <% if @facade.discovery? %>
   <div class="discover-movies">
     <% @facade.get_discover_movies.each do |movie| %>
-      <p><%= movie.title %>   <%= "Vote Average: #{movie.vote_average}" %></p>
+      <p><%= link_to movie.title, user_movie_path(@user, movie), method: :get %>   <%= "Vote Average: #{movie.vote_average}" %></p>
     <% end %>
   </div>
 <% else %>
   <div class="search-movies">
     <% @facade.get_search_movies.each do |movie| %>
-      <p><%= movie.title %>   <%= "Vote Average: #{movie.vote_average}" %></p>
+      <p><%= link_to movie.title, user_movie_path(@user, movie), method: :get %>   <%= "Vote Average: #{movie.vote_average}" %></p>
     <% end %>
   </div>
 <% end %>
