--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @user.name %>'s Dashboard</h1>
 
-<%= button_to "Discover Movies" %>
+<%= button_to "Discover Movies", "/users/#{@user.id}/discover", method: :get %>
 
 #add line break css here
 
