--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
 <h1><%= @user.name%>'s Dashboard</h1>
-<%= button_to "Discover Movies", user_discover_index_path(@user), method: :get %> 
+<%= button_to "Discover Movies", user_discover_path(@user), method: :get %> 
 <%= render partial: "shared/landing_header" %><br><br>
 <h4> Viewing Parties </h4>
