--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,11 @@
     <nav>
       <%= link_to "Home", "/" %>
     </nav>
-    <h1>Viewing Party</h1>
-    <%= yield %>
+    <h1 style="text-align: center">Viewing Party</h1>
+    <section>
+      <div style="text-align: center; width: auto; float: center">
+      <%= yield %>
+      </div>
+    </section>
   </body>
 </html>
