--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -3,7 +3,7 @@
   <table>
     <% @movies.each do |movie| %>
       <tr>
-        <td><%= link_to movie.title, user_movie_path(@user, movie), class: "movie_title" %></td>
+        <td><%= link_to movie.title, user_movie_path(@user, movie.id), class: "movie_title" %></td>
         <td>Vote Average: <%= movie.vote_average %></td>
       </tr>
     <% end %>
