--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,7 +1,10 @@
 <h3>Top Rated Movies</h3>
+
+<%= button_to "Discover Page", discover_path(@user.id), method: :get %>
+
 <ul id='top_movies'>
   <% @movies.each do |movie| %>
-    <li><%= link_to "#{movie.title}", movie_path(movie.id) %> Vote Average: <%= movie.vote_average %></li>
+    <li><%= link_to "#{movie.title}", movie_path(@user.id, movie.id) %> Vote Average: <%= movie.vote_average%></li>
   <% end %>
 </ul>
   
