--- a/app/views/movies/discover.html.erb
+++ b/app/views/movies/discover.html.erb
@@ -1,7 +1,7 @@
 <h2>Discover Movies</h2>
 
-<%= form_with url: user_movies_path(@user), method: :get do |form| %>
+<%= form_with url: user_movies_path(@user), method: :get, local: true do |form| %>
   <%= form.hidden_field :q, value: "top 20rated" %>
-  <%= form.submit "Find Top Rated Movies"%>
+  <%= form.submit "Find Top Rated Movies", name: nil%>
 <% end %>
 
