--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,5 +1,5 @@
 <ul>
-  <% @top_20.first(20).each do |movie| %>
-    <li><%= movie[:title] %>, <%= movie[:vote_average] %></li>
+  <% @top_20.each do |movie| %>
+    <li><%= movie.title %>, <%= movie.rating %></li>
   <% end %>
 </li>
