fix: fix search nomenclature

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,5 +1,5 @@
 <ul>
-  <% @top_20.each do |movie| %>
+  <% @facade.top20rated.each do |movie| %>
     <li><%= movie.title %>, <%= movie.rating %></li>
   <% end %>
 </li>
