--- a/app/views/users/discovers/index.html.erb
+++ b/app/views/users/discovers/index.html.erb
@@ -1,1 +1,8 @@
-suh
+
+<%= button_to "Discover Top Rated Movies", user_movies_path(@user), method: :get %>
+
+<%= form_with url: user_movies_path(@user), method: :get, local: true do |f| %>
+<%= f.label :search_by_similar_word %>
+<%= f.text_field :search_by_similar_word %>
+<%= f.submit "Search by Movie Title" %>
+<% end %>
