refac: tmdb_service for SRP

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,8 @@
       <%= link_to "Home", "/" %>
     </nav>
     <h1 style="text-align: center">Viewing Party</h1>
-    <section>
-      <div style="text-align: center; width: auto; float: center">
+    <section style="text-align: center; width: auto; float: center">
       <%= yield %>
-      </div>
     </section>
   </body>
 </html>
