--- a/app/views/movies/discover.html.erb
+++ b/app/views/movies/discover.html.erb
@@ -1,7 +1,8 @@
 <h2>Discover Movies</h2>
 
+<%# Top Rated Movies %>
 <%= form_with url: user_movies_path(@user), method: :get, local: true do |form| %>
-  <%= form.hidden_field :q, value: "top20rated" %>
+  <%= form.hidden_field :q, value: "top_20rated" %>
   <%= form.submit "Find Top Rated Movies", name: nil%>
 <% end %>
 
