--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,5 +1,7 @@
+<%= button_to "Discover Movies", user_discover_path(@user.id), method: :get %>
+
 <ul>
-  <% @facade.top20rated.each do |movie| %>
+  <% @facade.top_20_rated.each do |movie| %>
     <li><%= movie.title %>, <%= movie.rating %></li>
   <% end %>
 </li>
