--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <% flash.each do |msg| %>
       <div>
-        <%= msg %>
+        <%= msg[1] %>
       </div>
     <% end %>
     <%= link_to "Home", root_path %>
