--- a/app/views/movies/discover.html.erb
+++ b/app/views/movies/discover.html.erb
@@ -6,3 +6,10 @@
   <%= form.submit "Find Top Rated Movies", name: nil%>
 <% end %>
 
+<%# Find Movies by Name %>
+<%= form_with url: user_movies_path(@user), method: :get, local: true do |f| %>
+  <%= f.label :keywords %>
+  <%= f.hidden_field :q, value: :keywords %>
+  <%= f.text_field :keywords %>
+  <%= f.submit "Find Movies" %>
+<% end %>
