--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,3 +1,5 @@
 <h1><%= @movie.title %></h1>
 
+<%= button_to "Discover Page", discover_path(@user.id), method: :get %>
+<br>
 <%= button_to "Create Viewing Party", new_party_path(@user, @movie.id), method: :get %>
