--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,12 @@
-<h1><%= @user.name%>'s Dashboard</h1>
-<%= button_to "Discover Movies", user_discover_path(@user), method: :get %> 
 <%= render partial: "shared/landing_header" %><br><br>
-<h4> Viewing Parties </h4>
+
+<body>
+  <div class="content">
+    <center><table>
+      <h1>Viewing Party</h1>
+      <h4><%= @user.name%>'s Dashboard</h4>
+      <%= button_to "Discover Movies", user_discover_path(@user), method: :get %> 
+      <h4> Viewing Parties </h4>
+    </center></table>
+  </div>
+</body>
