Lazy Styling landing

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,16 +1,22 @@
-<h1> Viewing Party </h1><hr>
-
 <div class="partial">
   <%= render partial: "shared/landing_header" %><br><br>
 </div>
 
-<div id="new_user">
-  <%= button_to "Create New User", register_path, method: :get %>
-</div>
+<body>
+  <div class="content">
+    <center><table>
+      <h1> Viewing Party </h1><hr>
 
-<ul id='existing_users'>
-  <h3> Existing Users </h3>
-  <% @users.each do |user| %>
-    <%= link_to user.name, user_path(user.id)  %><br><br>
-  <% end %>
-  </ul>
+      <div id="new_user">
+        <%= button_to "Create New User", register_path, method: :get %>
+      </div>
+
+      <ul id='existing_users'>
+        <h3> Existing Users </h3>
+        <% @users.each do |user| %>
+          <%= link_to user.email, user_path(user.id)  %><br><br>
+        <% end %>
+        </ul>
+    </center></table>
+  </div>
+</body>
