fix: vcr test failure

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,4 +2,10 @@
 
 
 <h1>Movies Results Page</h1><br><br>
-<%= @facade.top_movies %>
+<% @facade.top_movies.each do |movie| %>
+    <br>
+    <%= movie.title %>
+    <%= movie.vote_average %>
+    <br>
+<% end %>
+
