--- a/app/views/users/discovers/index.html.erb
+++ b/app/views/users/discovers/index.html.erb
@@ -3,6 +3,7 @@
 
 <%= form_with url: user_movies_path(@user), method: :get, local: true do |f| %>
 <%= f.label :search_by_similar_word %>
-<%= f.text_field :search_by_similar_word %>
+<%= f.text_field :search_by_similar_word, name: 'search' %>
+<% f.hidden_field :search %>
 <%= f.submit "Search by Movie Title" %>
 <% end %>
