--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
     <center><table>
       <h1>Viewing Party</h1>
       <h4><%= @user.name%>'s Dashboard</h4>
-      <%= button_to "Discover Movies", user_discover_path(@user), method: :get %> 
+      <%= button_to "Discover Movies", user_discover_path(@user), method: :get %><hr> 
       <h4> Viewing Parties </h4>
     </center></table>
   </div>
