feat: Add some functionality for Movie Results Page > > Co-authored-by: Anna Wiley <awiley33@gmail.com> Co-authored-by: Ian Lyell <ilyell23@turing.edu>

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -4,8 +4,10 @@
 <h1>Movies Results Page</h1><br><br>
 <% @facade.top_movies.each do |movie| %>
     <br>
-    <%= movie.title %>
-    <%= movie.vote_average %>
+    <ul class="movie" >
+    <li class="title"><%= movie.title %></li>
+    <li class="vote_average"><%= movie.vote_average %></li>
+    </ul>
     <br>
 <% end %>
 
