--- a/app/views/movies/search.html.erb
+++ b/app/views/movies/search.html.erb
@@ -1,3 +1,3 @@
-<% @results.each do |result| %>
-  <%= result.title %><br>
+<% @movie_facade.each do |movie| %>
+  <%= movie.title %><br>
 <% end %>
