--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,10 +1,10 @@
 <h1> <%= @movie.title %> </h1>
 <%= link_to "Discover Page", "/users/#{@user.id}/discover" %>
-<%= button_to "Create Viewing Party", "/users/#{@user.id}/parties/new", method: :get %>
+<%= button_to "Create Viewing Party for Movie", "/users/#{@user.id}/parties/new", method: :get %>
 <br>
 <h2> Movie Details </h2>
 <p> Vote Average: <%= @movie.vote_average %> </p>
-<p> Genres: <% @movie.genres.each {|genre| %> <%= genre.name %> <% } %> </p>
+<p> Genres: <% @movie.genres.each {|genre| %> <%= genre[:name] %> <% } %> </p>
 <p> Runtime: <%= @movie.runtime %> </p>
 <p> Summary: <%= @movie.summary %> </p>
 <br>
