--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -3,7 +3,7 @@
 
 <h1>Movies Results Page</h1><br><br>
 
-<% @facade.top_movies.each do |movie| %>
+<% @facade.search_type.each do |movie| %>
     <br>
     <ul class="movie" >
     <li class="title"><%= movie.title %></li>
