--- a/app/views/users/discover.html.erb
+++ b/app/views/users/discover.html.erb
@@ -1,7 +1,7 @@
 <h3>Search for movies</h3>
-<%= form_tag movies_user_path(@user), method: :get do %>
+<%= form_tag user_movies_path(@user), method: :get do %>
   <%= text_field_tag :search, params[:search], placeholder: "Enter Movie Title" %>
   <%= submit_tag "Search"%>
 <% end %>
 <br>
-<%= button_to "Discover Top Rated Movies", movies_user_path(@user), method: :get %>
+<%= button_to "Discover Top Rated Movies", user_movies_path(@user), method: :get %>
