--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,6 +1,28 @@
 <%= render "shared/welcome_link" %>
 <%= render "shared/discover_button" %><br>
 
-<%= button_to "Create Viewing Party", new_viewing_party_path, method: :get, params: { user_id: @user.id, id: @movie_id } %>
+<%= link_to "Create Viewing Party", new_user_viewing_party_path(@user, movie_data: @movie.id), class: "button" %>
 
+<body>
+  <h3><%= @movie["title"] %></h3>
+  <ul>
+    <p><strong>Vote: </strong><%= @movie["vote_average"] %></p>
+    <p><strong>Runtime: </strong><%= @movie["runtime"] %></p>
+    <p><strong>Genre: </strong><%= @movie["genre"] %></p>
+    <p><strong>Summary: </strong><%= @movie["overview"] %></p>
+    <p><strong>Cast and Characters: </strong><br>
 
+    <% @movie["top_10"].each do |cast| %>
+      <p><%= cast.keys.first %> as <%= cast.values.first %></p>
+    <% end %>
+      
+    <p><strong><%= @movie["total_reviews"] %> Reviews</strong></p>
+    <p><strong>Review Authors</strong></p>
+    
+    <% @movie["review_authors"].each do |author| %>
+      <p>Author: <%= author["author"] %></p>
+      <p>Review: <%= author["content"] %></p><br>
+    <% end %>
+      
+  </ul>
+</body>
