--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,7 +8,7 @@
   <h3>Existing Users</h3>
   <ul>
     <% @users.each do |user| %>
-      <li><%= link_to user.name, user_path(user) %></li>
+      <li><%= link_to user.email, user_path(user) %></li>
     <% end %>  
   </ul>
 </body>
