--- a/app/views/discover/index.html.erb
+++ b/app/views/discover/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Discover Movies</h1>
 
-<%= button_to "Find Top Rated Movies", user_movies_path(@user), method: :get, params: {q: "top rated"} %>
+<%= button_to "Find Top Rated Movies", user_movies_path(@user.id), method: :get, params: {q: "top rated"} %>
 
 <%= form_with url: "/users/#{@user.id}/movies", method: :get, local: true do |form| %>
     <%= form.label :search, "search" %>
