test: Completes issue 8 co-authored-by <daniel.gallagher92@gmail.com>

--- a/app/views/user_movies/index.html.erb
+++ b/app/views/user_movies/index.html.erb
@@ -1,3 +1,4 @@
 <% @top_twenty_movies.each do |movie| %>
-  <p><%= movie.title %></p>
+  <p><%= link_to movie.title, user_movie_path(@user, movie.id) %></p>
+  <p><%= movie.vote_average %></p>
 <% end %>
