--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,7 +1,7 @@
 <%= render "shared/welcome_link" %>
 <%= render "shared/discover_button" %><br>
 
-<%= link_to "Create Viewing Party", new_user_viewing_party_path(@user, movie_data: @movie.id), class: "button" %>
+<%= link_to "Create Viewing Party", new_user_viewing_party_path(@user, movie_data: @movie), class: "button" %>
 
 <body>
   <h3><%= @movie["title"] %></h3>
