Add button to create a viewing party, change vote_average to rating

--- a/app/views/users/movie_show.html.erb
+++ b/app/views/users/movie_show.html.erb
@@ -1,8 +1,9 @@
 <h3><%= @movie.title %></h3>
 
 <%= button_to "Discover Page", user_discover_path(@user), method: :get %>
+<%= button_to "Create A Viewing Party For #{@movie.title}", new_user_movie_viewing_party_path(@user, @movie.id), method: :get %>
 
-<p>Vote: <%= @movie.vote_average %></p>
+<p>Vote: <%= @movie.rating %></p>
 <p>Runtime: <%= @movie.format_runtime %></p>
 <p>Genre: <%= @movie.genres %></p>
 
