--- a/app/views/viewing_parties/new.html.erb
+++ b/app/views/viewing_parties/new.html.erb
@@ -5,24 +5,25 @@
 
 <body>
   <h3>Viewing Party Details</h3>
-  <p>Movie Title: </p><%= @movie.title %>
+  <p>Movie Title: <%= @movie[:title] %></p>
 
   <%= form_with model: @viewing_party, url: user_viewing_parties_path(@user), local: true do |form| %>
 
     <%= form.label :duration %>
-    <%= form.time_field :duration %>
+    <%= form.number_field :duration_minutes %>
 
     <%= form.label :date %>
     <%= form.date_field :date %>
 
     <%= form.label :start_time %>
     <%= form.time_field :start_time %>
-
+    
     <%= form.label :users, "Invite Other Users" %>
     <% User.all.each do |user| %>
-      <%= form.check_box :user_ids, { multiple: true }, user.id %>
-      <%= user.name %>
-      <br>
+      <ul>
+        <%= form.check_box :user_ids, { multiple: true }, user.id %>
+        <%= user.name %>
+      </ul>
     <% end %>
       
     <%= form.submit %>
