added review mapper and review poro

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -26,5 +26,12 @@
   </ol>
 </p>
 <p style="text-align: left">
-  # Reviews:<br />
+<b>Reviews: <%= @review_count.count %> </b><br />
+  <div id="authors"> 
+    <ul>
+      <% @review_count.each do |review| %>
+        <li style="text-align: left"> Author: <%= review.author %></li>
+      <% end %>
+    </ul>
+  </div>
 </p>
