--- a/app/views/viewing_parties/new.html.erb
+++ b/app/views/viewing_parties/new.html.erb
@@ -8,6 +8,8 @@
   <p>Movie Title: <%= @movie[:title] %></p>
 
   <%= form_with model: @viewing_party, url: user_viewing_parties_path(@user), local: true do |form| %>
+    <%= hidden_field_tag :movie_data, @movie %>
+    <%= hidden_field_tag :runtime, @movie[:runtime] %>
 
     <%= form.label :duration %>
     <%= form.number_field :duration_minutes %>
