--- a/app/views/discover_movies/index.html.erb
+++ b/app/views/discover_movies/index.html.erb
@@ -1,5 +1,6 @@
 <h1>MOVIES</h1>
 <% @movies.each do |movie| %>
- <p><%= movie.title %></p>
- <p><%= movie.vote_average %></p>
+ <p>Title: <%= link_to movie.title, "/users/#{@user.id}/movies/#{movie.id}" %></p>
+ <p>Vote average: <%= movie.vote_average %></p>
+ <p>-----------------------------------------</p>
 <% end %>
