--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,3 +1,4 @@
-#iterate through movie objects and find:
-#movie title
-#vote average
+<% @movies.each do |movie| %>
+  <li><%= link_to movie.title %>
+  -- <%= link_to movie.vote_average %></li>
+<% end %>
