--- a/app/views/parties/new.html.erb
+++ b/app/views/parties/new.html.erb
@@ -1,1 +1,27 @@
-<h3><%= @movie.title %></h3>
+<h3>Create a Movie Party for <%= @movie.title %></h3>
+
+<%= button_to "Discover Page", discover_path(@user.id), method: :get %>
+
+<h3>Viewing Party Details</h3>
+
+Movie Title: <%= @movie.title %>
+
+<%= form_with model: @party, url: create_party_path(@user.id, @movie.id), method: :post do |form| %>
+  <%= form.label :duration %>
+  <%= form.number_field :duration, min: @movie.runtime %>
+  <br>
+  <%= form.label :date %>
+  <%= form.date_field :date %>
+  <br>
+  <%= form.label :time %>
+  <%= form.time_field :time %>
+  <br>
+  <h3>Invite Other Users</h3>
+  <% @users.each do |user| %>
+    <% next if user == @user %>  
+    <%= form.label user.name %>
+    <%= form.check_box :user_ids, { multiple: true }, user.id %>
+  <% end %>
+  <br>
+  <%= form.submit "Create Party" %>
+<% end %>
