--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,4 +1,7 @@
 <% @movies.each do |movie| %>
   <li><%= link_to movie.title %>
-  -- <%= link_to movie.vote_average %></li>
+  -- <%= movie.vote_average %></li>
 <% end %>
+
+
+
