add button to return to discover page
Co-authored-by: Bradley <bmilton2412@gmail.com>

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,6 +2,8 @@
   <li><%= link_to movie.title %>
   -- <%= movie.vote_average %></li>
 <% end %>
+</br>
+<%= button_to "Discover Page", "/users/#{@user.id}/discover"%>
 
 
 
