feat: add links to movie show pages on index page

--- a/app/views/movies/_top_rated.html.erb
+++ b/app/views/movies/_top_rated.html.erb
@@ -1,5 +1,5 @@
 <ul>
   <% @facade.top_20_rated.each do |movie| %>
-    <li><%= link_to movie.title %>, <%= movie.rating %></li>
+    <li><%= link_to movie.title, user_movie_path(@user.id, movie.id) %>, <%= movie.rating %></li>
   <% end %>
 </ul>
