wip: New user viewing party buildout

--- a/app/views/viewing_parties/new.html.erb
+++ b/app/views/viewing_parties/new.html.erb
@@ -1,9 +1,21 @@
-<h3>@movie.title Viewing Party</h3>
-<% if flash[:custom_message] %>
-  <div class="alert alert-custom">
-    <%= flash[:custom_message] %>
-  </div>
-<% end %>
+<h3><%= @details.title %> Viewing Party</h3>
+
+<% if @viewing_party.id %>
+<b> Select the box next to their name and submit via Invite to notify those users of your party! </b>
+  <%= form_with url: "/users/#{@user.id}/movies/#{@details.id}/viewing-parties/#{@viewing_party.id}/user-viewing-parties", local: true do |f| %>  
+    <% @users.each do |user| %>
+      <% unless @user.id == user.id %>
+        <div id="<%= user.id %>">
+          <%= check_box_tag 'user_ids[]', user.id %>
+          <%= user.name %>
+        </div>
+      <% end %>
+    <% end %>
+  <%= submit_tag 'Invite' %>
+  <% end %>
+
+<% else %>
+
   <%= form_with url: "/users/#{@user.id}/movies/#{@details.id}/viewing-parties", local: true do |f| %>  
     <p><%= f.label :duration, 'Duration in minutes:' %></p>
     <p><%=  f.number_field :duration%></p> 
@@ -19,3 +31,4 @@
 
     <p><%= f.submit "Create" %></p>
   <% end %>
+<% end %>
