--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,7 @@
 <h3>Invited to Parties</h3>
 <% @user.viewing_parties.each do |party| %>
   <% if party.host != @user.name %>
+    <%= image_tag "https://image.tmdb.org/t/p/w500#{party.poster_path}", alt: "Movie poster", width: "150" %>
     <p>Party name: <%= party.name %></p>
     <p>Host: <%= party.host %></p>
     <p>Movie Title: <%= party.movie_title %></p>
@@ -21,6 +22,7 @@
 <h3>Hosted Parties</h3>
 <% @user.viewing_parties.each do |party| %>
   <% if party.host == @user.name %>
+    <%= image_tag "https://image.tmdb.org/t/p/w500#{party.poster_path}", alt: "Movie poster", width: "150" %>
     <p>Party name: <%= party.name %></p>
     <p>Host:<strong> <%= party.host %></strong></p>
     <p>Movie Title: <%= party.movie_title %></p>
