--- a/app/views/discover_movies/index.html.erb
+++ b/app/views/discover_movies/index.html.erb
@@ -1,3 +1,4 @@
+<%= link_to "Discover", discover_user_path(@user) %>
 <h1>Results:</h1>
 <% @movies.each do |movie| %>
  <p>Title: <%= link_to movie.title, "/users/#{@user.id}/movies/#{movie.id}" %></p>
