refactor: Review now shows content instead of author information

--- a/app/views/movie_details/show.html.erb
+++ b/app/views/movie_details/show.html.erb
@@ -27,9 +27,7 @@
 <ul>
 <% @reviews.each do |review| %>
 <li><p> Author: <%= review.author %> <p>
-    <p> Name: <%= review.name %> <p>
-    <p> Username: <%= review.username %> <p>
-    <p> Rating: <%= review.rating %> <p>
+    <p> Content: <%= review.content %> <p>
     <% end %>
 </ul>
 </div>
