--- a/app/views/user_movies/show.html.erb
+++ b/app/views/user_movies/show.html.erb
@@ -16,9 +16,11 @@
   <h3>Cast and Characters:</h3>
   <% @movie.cast.each do |member| %>
     <p><%= member %></p>
-  <% end %>
-  <p>Total Reviews: <%=  @movie.review_count %></p>
+  <% end %><br>
+
   <h3>Reviews: </h3>
+  <p>Total Reviews: <%=  @movie.review_count %></p>
+  <% require 'pry'; binding.pry %>
   <% @movie.reviews.each do |review| %><br>
     <h4>Author: <%= review[:author] %></h4>
     <p>Username: <%= review[:username] %></p>
