--- a/app/views/user_movies/show.html.erb
+++ b/app/views/user_movies/show.html.erb
@@ -2,7 +2,7 @@
   <%= render partial: "shared/landing_header" %><br><br>
 </div>
 
-<%# <%= button_to "Create Viewing Party",  %> %>
+<%# <%= button_to "Create Viewing Party for #{@movie.title}", new_user_movie_viewing_party_path(@user, @movie.id) %> %>
 
 <%= button_to "Discover", user_discover_path(@user), method: :get %>
 
